--- a/event_mineducacion/views/purchase_requisition_view.xml
+++ b/event_mineducacion/views/purchase_requisition_view.xml
@@ -5,10 +5,19 @@
             <field name="model">purchase.requisition</field>
             <field name="inherit_id" ref="purchase_requisition.view_purchase_requisition_form" />
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='vendor_id']" position="attributes">
+                    <attribute name="required">True</attribute>
+                </xpath>
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='price_unit']" position="after">
+                    <field name="taxes_id" widget="many2many_tags" domain="[('type_tax_use','=','purchase')]" 
+                        context="{'default_type_tax_use': 'purchase', 'search_view_ref': 'account.account_tax_view_search'}" 
+                        options="{'no_create': True}"/>
+                    <field name="price_subtotal" widget="monetary" />
+                </xpath>
                 <xpath expr="//field[@name='line_ids']" position="after">
                     <group class="oe_subtotal_footer oe_right">
-                        <!--<field name="amount_untaxed" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                        <field name="amount_tax" widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+                        <field name="amount_untaxed" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                        <field name="amount_tax" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                         <div class="oe_subtotal_footer_separator oe_inline">
                             <label for="amount_total"/>
                         </div>
